--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "martin/rpc",
+    "name": "martin.hu/rpc",
     "type": "library",
     "minimum-stability": "stable",
     "require": {}
